location error handle ups

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -198,6 +198,7 @@ header {
 	float: left;
 	line-height: 50px;
 	margin: 0;
+	color: #3d3d3d;
 	padding: 10px 0 0 0;
 	@include transitionStyle(all, .1s, ease-in-out);
 
@@ -696,6 +697,32 @@ header {
 	    left: 50%;
 	    text-align: center;
 	    @include transformGeneral(translateX(-50%) translateY(-50%));
+	}
+}
+
+.loading-screen-fail {
+	text-align: center;
+	font-size: 18px;
+	display: none;
+
+	.overlay {
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		opacity: .7;
+		z-index: 2;
+		background-color: #fff;
+		@include transitionStyle(all, .2s, ease-in-out);
+	}
+
+	.loading-text-fail {
+		position: fixed;
+		top:50%;
+		left:50%;
+		z-index: 2;
+		@include transformGeneral(translateX(-50%) translateY(-50%));
 	}
 }
 
