--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -127,7 +127,7 @@ body {
 }
 
 #park-info-name {
-	font-size: 22px;
+	font-size: 18px;
 	margin: 10px 0 5px 0;
     padding: 5px 15px;
 	color: $light-main;
@@ -485,6 +485,61 @@ header {
 	}
 }
 
+.park-facilities-ul {
+	overflow: hidden;
+	width: 100%;
+	height: 26px;
+
+	@media all and (min-width: $screen-sm) {
+		height: auto;
+	}
+
+	ul {
+		margin: 0;
+		padding: 0;
+		overflow-x: scroll;
+		white-space: nowrap;
+		padding-bottom: 17px;
+
+		@media all and (min-width: $screen-sm) {
+			padding-bottom: 0;
+		}
+
+		li {
+			list-style: none;
+			position: relative;
+			display: inline-block;
+			height: 16px;
+			width: auto;
+			padding: 0 5px;
+			margin: 0 1px;
+			font-size: 0;
+			vertical-align: middle;
+			text-align: center;
+			@include transitionStyle(all, 1s, ease-in-out);
+
+			@media all and (min-width: $screen-sm) {
+				height: 30px;
+			}
+
+			.item {
+				font-size: 16px;
+				display: inline-block;
+				position: relative;
+				top: 50%;
+				left: 0;
+				margin-top: -10px;
+				color: $btn-text;
+
+				@media all and (min-width: $screen-sm) {
+					font-size: 18px;
+					margin-top: -14px;
+				}
+			}
+		}
+	}
+}
+
 .park-selected {
 	opacity: .5;
 }
@@ -522,8 +577,12 @@ header {
 		color: $btn-text;
 
 		li {
-			display: block;
-			//white-space: nowrap;
+			display: inline-block;
+
+			// everything above an iphone 4/5
+			@media (min-width: 321px) {
+				display: block;
+			}
 		}
 	}
 }
@@ -732,8 +791,15 @@ header {
 	text-align: center;
 }
 
+.fa-styling-small {
+	color: $dark-main;
+	font-size: 10px !important;
+	text-align: center;
+	vertical-align: middle;
+}
+
 .image-bullet-point {
-	width: 16px;
+	width: 14px;
 	margin-left: 10px;
     margin-top: -3px;
 }
